--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,10 +100,10 @@ services:
       - "3069:8080"
     volumes:
       - open-webui:/app/backend/data
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
     environment:
-      OLLAMA_BASE_URL: http://0.0.0.0:11434/api
+      OLLAMA_BASE_URL: http://ollama:11434
     restart: always
     depends_on:
       - ollama
@@ -117,6 +117,11 @@ services:
     volumes:
       - ollama_data:/root/.ollama
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
     networks:
       - ai
   ollama-local:
@@ -152,6 +157,30 @@ services:
     restart: unless-stopped
     networks:
       - backend
+  chromadb:
+    image: chromadb/chroma:latest
+    container_name: chromadb
+    ports:
+      - "8000:8000"
+    volumes:
+      - /media/sam/main/chroma:/chroma/db
+    restart: unless-stopped
+    networks:
+      - ai
+  mcp-time:
+    build:
+      context: .
+      dockerfile: Dockerfile.mcp-time
+    ports:
+      - "8080:8080"
+    networks:
+      - backend
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
 networks:
   ai:
     driver: bridge
@@ -167,3 +196,4 @@ volumes:
   portainer-data:
   open-webui:
   ollama_data:
+  chromadb:
